tdf#137460: Additions: Fix crash on error 404

Change-Id: Id1eb6d43add5d5d9c9f6c09a1e5a4137462f596e